--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "handlebars.moment": "^1.0.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0"
   },
